Projet GL/Projet_GL/src/test/deca/syntax/invalid/bad_while.deca
// Description:
//    while avec 2 identificateur sans virgule
//
// Resultats:
//     no viable alternative at input 'b'
//
// Historique:
//    cree le 10/01/2023

{
    while(a b){

    }
}
